[tool.poetry]
name = "carthorse"
version = "0.1.0"
description = "Safely creating releases when you change the version number."
authors = ["Chris Withers <chris@withers.org>"]

[tool.poetry.scripts]
carthorse = "carthorse.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
testfixtures = "^6.4"
pytest-cov = "^2.6"

[tool.carthorse]
version-from = "poetry"
when = [
  "version-not-tagged"
]
actions = [
   { run="poetry publish --username chrisw --password $POETRY_PASS --build"},
   { name="create-tag"},
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
