[tool.poetry]
name = "carthorse"
version = "1.0.1"
description = "Safely creating releases when you change the version number."
license = "MIT"
authors = ["Chris Withers <chris@withers.org>"]
readme = "README.rst"
repository = "https://github.com/cjw296/carthorse"

[tool.poetry.scripts]
carthorse = "carthorse.cli:main"

[tool.poetry.plugins."carthorse.version_from"]
"poetry" = "carthorse.version_from:poetry"
"setup.py" = "carthorse.version_from:setup_py"

[tool.poetry.plugins."carthorse.when"]
"version-not-tagged" = "carthorse.when:version_not_tagged"
"never" = "carthorse.when:never"

[tool.poetry.plugins."carthorse.actions"]
"run" = "carthorse.actions:run"
"create-tag" = "carthorse.actions:create_tag"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"
pyyaml = "^3.13"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
testfixtures = "^6.4"
pytest-cov = "^2.6"

[tool.carthorse]
version-from = "poetry"
when = [
  "version-not-tagged"
]
actions = [
   { run="poetry publish --username chrisw --password $POETRY_PASS --build"},
   { name="create-tag"},
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
