[tool.poetry]
name = "carthorse"
version = "1.3.0"
description = "Safely creating releases when you change the version number."
license = "MIT"
authors = ["Chris Withers <chris@withers.org>"]
readme = "README.rst"
repository = "https://github.com/cjw296/carthorse"

[tool.poetry.scripts]
carthorse = "carthorse.cli:main"

[tool.poetry.plugins."carthorse.version_from"]
"poetry" = "carthorse.version_from:poetry"
"setup.py" = "carthorse.version_from:setup_py"
"file" = "carthorse.version_from:file"
"flit" = "carthorse.version_from:flit"
"none" = "carthorse.version_from:none"
"env" = "carthorse.version_from:env"

[tool.poetry.plugins."carthorse.when"]
"version-not-tagged" = "carthorse.when:version_not_tagged"
"never" = "carthorse.when:never"
"always" = "carthorse.when:always"

[tool.poetry.plugins."carthorse.actions"]
"run" = "carthorse.actions:run"
"create-tag" = "carthorse.actions:create_tag"

[tool.poetry.dependencies]
python = "^3.6"
toml = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
testfixtures = "*"
pytest-cov = "*"

[tool.carthorse]
version-from = "poetry"
when = [
  "version-not-tagged"
]
actions = [
   { run="poetry publish --username chrisw --password $POETRY_PASS --build"},
   { name="create-tag"},
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
